# Chative_knowledge_pipeline_poc

./: .gitignore  GUIDELINE.md  README.md  chunking.py  docling.ipynb  main.py  pyproject.toml  test.py  test_retrieve.py  todo.txt
data/: Develop Process_QuantLab.pptx
output/: 2509.04343v1.md  Cryptography.md  Develop Process_QuantLab.md  Screenshot 2568-07-18 at 12.10.26.md
script/: describe_collection.py  test_retrieve.py
src/: adapter.py  config.py  main.py  picture_serializer.py
src/chunking/: cache.py  config.py  embed_gemini.py  main.py  pipeline.py  splitter.py  utils.py
src/cost_management/: __init__.py
src/cost_management/infrastructure/: __init__.py  mistral_cost_tracker.py  openai_cost_tracker.py
src/cost_tracker/: gemini_cost_tracker.py  mistral_cost_tracker.py
src/document_chunking/: __init__.py
src/document_chunking/application/: __init__.py  chunking_service.py
src/document_chunking/domain/: __init__.py  models.py  services.py
src/document_chunking/infrastructure/: __init__.py  markdown_splitter.py  semantic_chunker.py
src/document_extraction/: __init__.py
src/document_extraction/application/: __init__.py  extraction_service.py
src/embedding/: __init__.py  config.py  dense.py  gemini.py  main.py  sparse.py
src/extraction/: README.md  config.py  main.py  mistral_cost_tracker.py  ocr_policy.py  picture_serializer.py  pipeline_option.py
src/knowledge_embedding/: __init__.py
src/knowledge_store/: README.md  __init__.py
src/load/: README.md  __init__.py  main.py  milvus_store.py  sparse.py
src/shared/: __init__.py  config.py
(+25 files in other folders)
